<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"Automatic diary"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings_mi">Refresh</string>
    <string name="stop_message">Stop to do it, please</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="ok_button_text">OK</string>
    <string name="login">Sign IN</string>
    <string name="signup">Sign UP</string>
    <string name="hint_email">Type Email</string>
    <string name="hint_pass">Type Password</string>
    <string name="singin">Sign IN</string>
    <string name="singup">Sign UP</string>
    <string name="registration_label">Registration</string>
    <string name="hint_name">Type name</string>
    <string name="hint_username">Type username</string>
    <string name="hint_country">Where are you from ?</string>
    <string name="hint_city">Current city</string>
    <string name="hint_picture">Upload picture</string>
    <string name="btn_registration">Register</string>
    <string name="cancel">Cancel</string>
    <string name="hint_password">Password</string>
    <string name="hint_repassword">Confirm password</string>
    <string name="hint_last_name">Type lastname</string>
    <string name="hint_age">Type age</string>
    <string name="label_sign_in">Sign in</string>
    <string name="label_sign_up">Sign up</string>
    <string name="label_registration_first_name">First name</string>
    <string name="label_registration_last_name">Last name</string>
    <string name="label_registration_contry">Contry</string>
    <string name="label_registration_city">City</string>
    <string name="label_registration_email">Email</string>
    <string name="label_registration_password">Password</string>
    <string name="label_registration_repeat_password">Re-password</string>
    <string name="confirm_reg">Get started</string>
    <string name="registration_next1">Next</string>
    <string name="label_registration_gender">Sex</string>
    <string name="label_registration_bday">Date of birth</string>
    <string name="label_registration_photo">Photo</string>
    <string name="desc_photo">Take/Upload photo</string>
    <string name="user_full_name">Full name</string>
    <string name="user_detail_photo">Photo</string>
    <string name="follow">Follow</string>
    <string name="ac_skip">SKIP</string>

    <string-array name="sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <string-array name="menu_array">
        <item>Map</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="upload_photo">Upload photo</string>
    <string name="bday">Birthday</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="phone_number">Phone number</string>


</resources>
