<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <EditText
                android:layout_above="@+id/edt_password"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/ic_email"
                android:layout_marginStart="50dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:gravity="center"
                android:id="@+id/edt_registration_email"
                style="@style/SignInEditText"
                android:background="@null"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"/>

            <EditText
                android:layout_above="@+id/edt_repassword"
                android:background="@null"
                android:layout_centerHorizontal="true"
                android:drawableStart="@drawable/ic_pass"
                android:layout_marginStart="50dp"
                android:textColor="@color/text"
                android:textColorHint="@color/text"
                android:gravity="center"
                android:id="@+id/edt_password"
                style="@style/SignInEditText"
                android:inputType="textPassword"
                android:hint="@string/hint_password" />

            <EditText
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:drawableStart="@drawable/ic_pass"
                android:id="@+id/edt_repassword"
                style="@style/SignInEditText"
                android:background="@null"
                android:inputType="textPassword"
                android:hint="@string/hint_repassword"
                android:textColorHint="@color/text"
                android:gravity="center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/btn_cancel_registration"
                android:layout_centerHorizontal="true"
                style="@style/ShadowText"
                android:id="@+id/btn_registration_next1"
                android:text="@string/registration_next1"
                android:textColor="@color/text"
                android:background="@drawable/button_background_states"
                android:layout_marginStart="70dp"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                style="@style/ShadowText"
                android:id="@+id/btn_cancel_registration"
                android:text="@string/cancel_button_text"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:background="@drawable/button_background_disabled"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:layout_marginStart="70dp"/>
        </RelativeLayout>

</LinearLayout>