<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.loopj.android.image.SmartImageView
                android:id="@+id/img_user_list"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:padding="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_user_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_full_name"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/tv_user_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_registration_contry"
                android:textAppearance="?android:attr/textAppearanceLarge"/>
            <TextView
                android:id="@+id/tv_user_bday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_registration_bday"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>