<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context = ".UserDetailActivity">

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="10dp"
        android:background="?android:colorBackground">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_user_detail_photo"
                    android:layout_width="100dp"
                    android:layout_height="105dp"
                    android:layout_gravity="center"
                    android:background="@drawable/icon_person"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="10dp"
                    android:contentDescription="@string/user_detail_photo"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/ShadowText"
                    android:id="@+id/tv_user_detail_name"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/user_detail"
                    android:textStyle="italic"/>


                <TextView
                    style="@style/ShadowText"
                    android:id="@+id/tv_user_detail_username"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/user_detail"
                    android:textStyle="italic"/>

                <TextView
                    style="@style/ShadowText"
                    android:id="@+id/tv_user_detail_current_location"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/user_detail"
                    android:textStyle="italic"/>
                <TextView
                    style="@style/ShadowText"
                    android:id="@+id/tv_user_detail_sex"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/user_detail"
                    android:textStyle="italic"/>
                <TextView
                    style="@style/ShadowText"
                    android:id="@+id/tv_user_detail_birth_day"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="5dp"
                    android:paddingTop="5dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/user_detail"
                    android:textStyle="italic"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="20dp">



                <Button
                    android:id="@+id/btn_user_detail_cancel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/ShadowText"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_signup_background_states"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cancel_button_text"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_user_detail_follow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    style="@style/ShadowText"
                    android:layout_marginTop="15dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/button_background_states"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/follow"
                    android:textColor="@color/text"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>